# FlexRoWick_clamp_control

./: LICENSE  README.md
src/: .CMakeLists.txt.swp  CMakeLists.txt
src/clamp_control/: opcua_clamp_client.h  package.xml
src/clamp_control/src/: opcua_clamp_client.cpp
src/clamp_control_node/: CMakeLists.txt  clampControllerNode.py  package.xml
src/clamp_control_node/src/: clampControllerNode.py
src/clamp_controller/: CMakeLists.txt  main.py  package.xml
src/clamp_controller/config/: clamp_controller.yaml
src/clamp_controller/controller_interface/: CMakeLists.txt  clamp_command_interface.py  package.xml
src/clamp_controller/controller_interface/config/: clamp_controller.yaml
src/clamp_controller/plc_client_node/: CMakeLists.txt  plcClientNode.py
src/clamp_controller/plc_client_node/config/: plc_client.yaml
src/clamp_controller/plc_client_node/launch/: clamp_ctrl.launch
src/clamp_controller/plc_client_node/src/: main.py
src/plc_client_node/: CMakeLists.txt  main.py  package.xml
src/plc_client_node/config/: plc_client.yaml
src/plc_client_node/src/plc_client_node/: plcClientNode.py
