<package format="2">
    <name>clamp_control</name>
    <version>1.0.0</version>
    <description>The clamp control package</description>
    <maintainer email="bhatrakesh930@gmail.com">Rakesh Bhat Karkala</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>std_msgs</build_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
</package>