<?xml version="1.0"?>
<package format="2">
  <name>plc_client_node</name>
  <version>1.0.0</version>
  <description>The ROS package for PLC Client that controls electric motor clamp</description>

  <maintainer email="bhatrakesh930@gmail.com">rakesh-1597</maintainer>

  <license>MIT</license>

  <!--<doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>python3</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3</exec_depend>



  <export>

  </export>
</package>
